---------
0.1.1
---------
- Added `extra_callback_info1_byte_2` variable for quick access to the second byte of `extra_callback_info1`.
- Print timings for grf compilation.
- Renamed `layout` argument of `CallbackManager.make_switch` to `graphics`.
- Added optional `purchase_graphics` argument for `CallbackManager.make_switch` to specify different chain for vehicle purchase graphics.
- Change vehicle `retire_early` Action0 property type to a signed byte.
- Added `RunningCost` class of constants.
- Added `VEHICLE_FEATURES` constant.
- Allowed sprite generators to return other generators.
- Added `SpriteTable` and `VehicleSpriteTable` classes.
- Added `DisableDefault` sprite generator for disabling default vehicles.
- Added VarAction 2 variables for rail types.
- Renamed `RoadVehicle.Flags` to `RVFlags`, added more constants to it.
- Added `TrainFlags` and `CargoClass` classes of constants.
- Added `train_hpi` and `train_ton` functions for unit conversions.
- grftopy: Added outlines to duplicate sprites: red - full dup, yellow - data dup but different offsets

---------
0.1.0
---------

Initial version:
- Low-level support for most actions and feautures.
- Semi-functional decompiler.
- Basic high-level classes for road vehicles and trains.