@@ -14,7 +14,8 @@
 - Added VarAction 2 variables for rail types.
 - Renamed `RoadVehicle.Flags` to `RVFlags`, added more constants to it.
 - Added `TrainFlags` and `CargoClass` classes of constants.
-- Added `train_hpi` and `train_ton` functions for unit conversions.
+- Added `train_hpi`, `train_ton`, and `nml_te` functions for unit conversions.
+- Added `set_cargo_table` and `map_cargo_labels` methods to `BaseNewGRF` class.
 - grftopy: Added outlines to duplicate sprites: red - full dup, yellow - data dup but different offsets
 
 ---------
